# misis_petproject

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/include/: author_warning.h  glfw_impl.hxx  imgui_impl.hxx  nlohman_impl.hxx  spdlog_impl.hxx  std.hxx  utility_macros.h
app/libs/: CMakeLists.txt
app/libs/imgui/: CMakeLists.txt  imgui.ixx  themes.ixx
app/libs/std/: CMakeLists.txt  std.cxx
app/libs/utilities/: CMakeLists.txt  config.ixx  fonts.ixx  logging.ixx  os.ixx  seh.h  seh.ixx  stopwatch.ixx  threadloop.ixx  utf.ixx  utils.ixx  win.ixx
app/main/: CMakeLists.txt  main.concepts.cxx  main.consts.cxx  main.core.cxx  main.core.imgui.cxx  main.initialization.cxx  main.ixx  main.start.cxx
app/model/: CMakeLists.txt  model.ixx  model.matcher.cxx  model.sync.cxx
app/views/: CMakeLists.txt  view.tiles.controls.cxx  view.tiles.ixx  view.tiles.paths.cxx  view.tiles.pdf.cxx  view.tiles.pdfbox.cxx  view.tiles.state.cxx  view.tiles.status.cxx  view.tiles.table.cxx
app/widgets/: CMakeLists.txt  widgets.appbutton.cxx  widgets.busy.cxx  widgets.ixx  widgets.msgbox.cxx  widgets.styles.cxx  widgets.symbuttons.cxx  widgets.textures.cxx
cmake/: assets.cmake  cmake-tools.cmake  intellisense.cmake  options.cmake  packages.cmake  reuse.cmake  submodules.cmake  targets.cmake  testing.cmake
tests/: CMakeLists.txt
tests/examples/: ctest_sample.cpp  doctest_sample.cpp
